--- a/static/register.html
+++ b/static/register.html
@@ -90,10 +90,12 @@
 				      withCredentials: true
 				   },
 				success:function(data){
-					if(data.status == "success")
+					if(data.status == "success"){
 						alert("注册成功");
-					else
+						window.location.href="login.html";
+					}else{
 						alert("注册失败,原因为"+data.data.errMsg)
+					}
 				},
 				error:function(data){
 					alert("注册失败,原因在"+data.responseText);
