--- a/static/getotp.html
+++ b/static/getotp.html
@@ -48,7 +48,7 @@
 				success:function(data){
 					if(data.status == "success"){
 						alert("otp已经发送到你的手机上,请注意查收");
-						window.location.href="file:///C:/Users/AWN2/Desktop/Static_miaosha/register.html";
+						window.location.href="register.html";
 					}else{
 						alert("otp发送失败,原因为"+data.errMsg)
 					}
